Modified code up to SonarLint